--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container">
       <header class="navbar">
         <div class="left">
-        Konstantin Mihaylov
+        Konstantin 
         </div>
         <nav class="right">
           <a href="#">Work</a>
